??? ??? ?? ??:??:?? UTC ????

        0.40 release.

        Changes

        Bugs fixed

        New features

        Internal

        - Update Botan to 1.7.3.


Mon Feb 25 15:55:36 UTC 2008

        0.39 release.

        Changes

        - 'mtn di' is now an alias for 'mtn diff'.

        - 'automate db_set' has been renamed to 'automate set_db_variable'.

        - 'automate db_get' has been replaced by 'automate get_db_variables'
          which returns all database variables similar to 'list vars' in
          basic_io format, optionally restricted by domain.

        - The REVID argument of 'automate get_revision' is now mandatory;
          to retrieve the current workspace revision, use the new command
          'automate get_current_revision'

        - messages describing conflicts from all of the various merge commands
          have been reworked and should be much more informative.

        - mtn show_conflicts now outputs much more detailed and descriptive
          messages, however it may report content conflicts that will be
          resolved automatically by the line merger.

        - The internal copy of PCRE has been updated to version 7.6.
          If you use the '--with-system-pcre' configure switch, it
          will insist on at least this version.

        - "emacs" has been removed from the list of dumb terminal types; 
          tickers should now default to --ticker=count with emacs terminals

        - extensive section on merge conflicts and ways to resolve them
          added to the manual.

        Bugs fixed

        - for changes near the beginning of a file, mtn's unified diff
          output sometimes contained too many leading context lines.

        - the path handling of 'mtn revert' was improved and fixed two bugs:
          now a restricted revert on a node "dir1/file1" reverts only the
          content changes in "file1", but leaves renames of any of its